--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ secrets/*
 data/*
 logs/*
 
-# Ignore enabled stacks
-stacks/enabled/*
+# Ignore enabled stacks config
+stacks/enabled/.env
 
 # Ignore certs directory since it's automatically kept up to date by extracting certs from traefik
 config/certs/*
