--- a/stacks/available/kuma.yml
+++ b/stacks/available/kuma.yml
@@ -32,3 +32,9 @@ services:
       ## HTTP Services
       - "traefik.http.routers.uptimekuma-rtr.service=uptimekuma-svc"
       - "traefik.http.services.uptimekuma-svc.loadbalancer.server.port=3001"
+      ## HTTP Routers Local
+      - "traefik.http.routers.uptimekuma-rtr-local.entrypoints=https"
+      - "traefik.http.routers.uptimekuma-rtr-local.rule=Host(`uptimekuma.$LOCALDOMAIN`)"
+      - "traefik.http.routers.uptimekuma-rtr-local.tls=true"
+      - "traefik.http.routers.uptimekuma-rtr-local.service=uptimekuma-svc-local"
+      - "traefik.http.services.uptimekuma-svc-local.loadbalancer.server.port=3001"
